v0.3.0 - XXX, xxx
  - Menu: Added MultipleMenuItem, an item that supports multiple possible
    values. Contributed by Alejandro Weil (tenuki)
  - actions are defined in the actions/ folder
  - ActionSprite and SpriteGroup added in sprite.py
  - Added DefaultHandler:
     ESCAPE: director.pop
     MOD_ACCEL + f: Toggles Fullscreen
     MOD_ACCEL + p: Toggles Pause
     MOD_ACCEL + w: Toggles wireframe mode
     MOD_ACCEL + s: Takes a screenshot of the current window
     MOD_ACCEL + x: Toggles FPS
  - alpha blending enabled by default. 
    use director.set_alpha_bleding(True|False) to change.
  - Actions: Goto renamed to MoveTo and Move renamed to MoveBy
     Scale renamed to ScaleBy. Added ScaleTo
     Rotate renamed to RotateBy. Added RotateTo
  - Actions: Added IntervalAction decorators:
     Accelerate, AccelDeccel
  - Actions:Added a new base class: InstantAction 
  - Added compositions and actions to scenes and layers
  - Added setup.py and setup.cfg contributed by David Eyk
  - Actions: Added Mesh effects:
     Liquid, Sin Shaky, ShakyTiles, ShuffleTiles, QuadMoveBy
     MoveCornerUp, MoveCornerDown, SkewVertical, SkewHorizontal
     FlipX, FlipY, Flip, CornerSwap, ShatteredTiles,
     FadeOutTiles, Waves3D, FlipX3D, FlipY3D, Lens3D
   - Actions: Added Waves decorators: AccelAmplitude, DeccelAmplitude,
       AccelDeccelAmplitude.
    
v0.2.0 - March, 21th 2008
  - Director: uses the new pyglet 1.1 loop
  - Director: doesn't have the step() method. Uses on_draw() instead.
  - Director: enable_alpha_blending() is not called automatically
  - Scene: does not have the step() method. Uses on_draw() instead.
  - Layer: step() is called only when it is enabled with Layer.enable_step()
  - Layer: Removed AnimationLayer. No longer necessary.
  - Layer: uses Batch.draw() to draw objects. Propagates the message draw() to the objects it contains.
  - ActionSprite: is a subclass of pyglet.sprite.Sprite
  - ActionSprite: Move() and Goto() uses (x,y) instead of (x,y,0)